--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teclazo",
-  "version": "0.1.3",
-  "description": "Sends keystrokes to current terminal's tty",
+  "version": "0.2.0",
+  "description": "Sends keystrokes to a terminal's tty",
   "main": "teclazo.js",
   "gypfile": true,
   "scripts": {
